--- a/Assignments/Midterm Prep #6/about.html
+++ b/Assignments/Midterm Prep #6/about.html
@@ -6,7 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<title>About</title>
 	<meta name="viewport" content="width-device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700" rel="stylesheet">
+
 </head>
 
 
