--- a/Assignments/Midterm Prep #6/index.html
+++ b/Assignments/Midterm Prep #6/index.html
@@ -6,17 +6,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<title>Home</title>
 	<meta name="viewport" content="width-device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700" rel="stylesheet" />
+
 </head>
 
 
 <body>
 <nav>
+	<img src="images/logo.png" class="logo" width="170" height="auto"><a href="index.html"></a>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="work.html">Work</a></li>
 		<li><a href="about.html">About</a></li>
-		<li><a href="blog.html">Blog</a></li>
+		<li><a href="blog.html">Blog</a></li> <p>After your last LI</p>
 	</ul>
 </nav>
 
