--- a/Assignments/Midterm Prep #6/blog.html
+++ b/Assignments/Midterm Prep #6/blog.html
@@ -7,20 +7,18 @@
 	<title>Blog</title>
 	<meta name="viewport" content="width-device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Mukta:300,400,500" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700" rel="stylesheet">
 
 </head>
 
 
 <body>
 <nav>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="work.html">Work</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="blog.html">Blog</a></li>
-	</ul>
+		<img src="images/logo.png" class="logo" width="170" height="auto"><a href="index.html"></a>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="blog.html">Blog</a></li>
+		</ul>
 </nav>
 
 
