--- a/Assignments/Midterm Prep #6/index.html
+++ b/Assignments/Midterm Prep #6/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <nav>
-		<img src="images/logo.png" class="logo" width="170" height="auto"><a href="index.html"></a>
+		<a href="index.html"><img src="images/logo.png" class="logo" width="170" height="auto"></a>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
@@ -21,7 +21,17 @@
 		</ul>
 </nav>
 
+<div class="example-containers">
 
+	<div id="ex1">
+		<img id="ex1" src="images/example1.png">
+	</div>
+
+	<div id="ex2">
+		<img src="images/example2.png">
+	</div>
+
+</div>
 
 </body>
 </html>
