--- a/Assignments/Midterm Prep #6/about.html
+++ b/Assignments/Midterm Prep #6/about.html
@@ -13,7 +13,7 @@
 
 <body>
 <nav>
-		<img src="images/logo.png" class="logo" width="170" height="auto"><a href="index.html"></a>
+		<a href="index.html"><img src="images/logo.png" class="logo" width="170" height="auto"></a>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
