--- a/Assignments/Midterm Prep #6/index.html
+++ b/Assignments/Midterm Prep #6/index.html
@@ -21,14 +21,14 @@
 		</ul>
 </nav>
 
-<div class="example-containers">
+<div class="grid-containers">
 
-	<div id="ex1">
-		<img id="ex1" src="images/example1.png">
+	<div class="img-holder">
+		<img class="example" src="images/example1.png">
 	</div>
 
-	<div id="ex2">
-		<img src="images/example2.png">
+	<div class="img-holder">
+		<img class="example" src="images/example2.png">
 	</div>
 
 </div>
