--- a/Assignments/Midterm Prep #6/index.html
+++ b/Assignments/Midterm Prep #6/index.html
@@ -24,14 +24,48 @@
 <div class="grid-containers">
 
 	<div class="img-holder">
-		<img class="example" src="images/example1.png">
+		<img class="example" id="example1" src="images/example1.png">
+			<figcaption>Latino Heritage Illustration</figcaption>
 	</div>
 
 	<div class="img-holder">
-		<img class="example" src="images/example2.png">
+		<img class="example" id="example2" src="images/example2.png">
+			<figcaption id="figexample2">Food Illustration</figcaption>
+	</div>
+	
+	<div class="img-holder">
+		<img class="example" id="example3" src="images/example5.png">
+			<figcaption>Perfume Packaging</figcaption>
 	</div>
 
+	<div class="img-holder">
+		<img class="example" id="example4" src="images/example4.png">
+			<figcaption>Perfume Packaging</figcaption>
+	</div>    
+
+	<div class="img-holder">
+		<img class="example" id="example5" src="images/example6.png">
+			<figcaption>Spice Label</figcaption>
+	</div>
+
+	<div class="img-holder">
+		<img class="example" id="example6" src="images/example3.png">
+			<figcaption>Logo Designs</figcaption>
+	</div> 
+
+	<div class="img-holder">
+		<img class="example" id="example7" src="images/example8.png">
+			<figcaption>Typographic Arrangment</figcaption>
+	</div>
+
+	<div class="img-holder">
+		<img class="example" id="example8" src="images/example7.png">
+			<figcaption>Typography Poster</figcaption>
+	</div> 
+
+
 </div>
+
 
 </body>
 </html>
