--- a/Assignments/Midterm Prep #6/about.html
+++ b/Assignments/Midterm Prep #6/about.html
@@ -21,6 +21,22 @@
 		</ul>
 </nav>
 
+<div id="portraitmobile"> 
+	
+	<img id="portraitresize" src="images/me.png">
+
+</div>
+
+<div>
+	<p id="aboutheader"> Jesus Arango </p> 
+	
+	<p id="bodycopy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vehicula sollicitudin arcu. Cras venenatis ut dui sed cursus. Curabitur a tincidunt elit, sit amet tempor ex. Curabitur sed purus vitae sem gravida feugiat. Pellentesque vestibulum quis sem eu finibus. Aliquam erat volutpat. Phasellus pellentesque ornare purus, non posuere tortor vehicula sit amet. Praesent non venenatis ipsum, non eleifend nulla. Donec tincidunt lacus sed lectus tempor interdum. Quisque imperdiet, metus in iaculis luctus, quam purus aliquet justo, in convallis est nunc vitae magna. Duis eget pellentesque erat. Duis velit mi, semper nec dictum non, aliquet nec massa. Pellentesque in ultricies mauris.
+
+	Curabitur vestibulum odio vel justo tempor tempor. Aenean venenatis dui sem, et pretium velit gravida eu. Sed vel dictum eros. In ornare condimentum auctor. Vestibulum pellentesque, purus eget porta condimentum, ante diam aliquam nibh, et fringilla arcu massa ac magna. Nulla facilisi. Proin imperdiet sit amet tellus at rutrum. Donec quis leo fringilla, euismod nisi eget, auctor nisi. In ut ipsum imperdiet, vestibulum leo at, efficitur erat. Quisque eget eleifend felis. Phasellus metus est, congue sit amet nunc ut, feugiat porta neque.
+
+	Aliquam sollicitudin, tellus eu imperdiet suscipit, tortor lacus cursus diam, sit amet volutpat tellus magna et ex. Donec in dolor pharetra, euismod lorem a, efficitur dui. Sed consectetur libero id mauris laoreet tincidunt. Mauris tincidunt orci neque, ac dignissim arcu vulputate eu. Suspendisse potenti. Maecenas lacinia risus eu risus tincidunt, convallis malesuada nibh viverra. Mauris hendrerit sapien et nisl tristique lacinia.</p>
+
+ </div>
 
 
 </body>
