--- a/Assignments/Midterm Prep #6/blog.html
+++ b/Assignments/Midterm Prep #6/blog.html
@@ -21,6 +21,46 @@
 		</ul>
 </nav>
 
+<div class="blog-containers">
+
+	<div class="blog-holder">
+		<img class="blog-entry" id="blog-entry-mobile1" src="images/artwork.jpg">
+			<figcaption class="blog-header"><a>Millions Killed In Horrific Accident</a></figcaption>
+			<p id="blog-bodycopy"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et imperdiet felis. Aliquam sed scelerisque urna. Nam dignissim, est vitae efficitur aliquam, velit erat finibus ex, nec gravida nibh ipsum ac justo. Quisque auctor justo eu massa volutpat, nec blandit tortor porttitor. Aliquam eget ornare enim, eu congue orci. Quisque feugiat dolor elit, eu faucibus neque vulputate et. Pellentesque vestibulum tellus ut mollis vulputate. Nunc gravida mi ac lorem dignissim sollicitudin. Integer dignissim placerat sapien fringilla consequat. In vitae eros leo. Quisque auctor orci in diam lacinia suscipit. Cras mattis eros sed velit scelerisque, vel malesuada metus congue. Vivamus vel semper urna, a mollis enim.
+				<br /> <br />
+
+			Praesent mattis at mi non lacinia. Pellentesque euismod, magna elementum rhoncus congue, ligula dui tempor quam, nec interdum lacus neque ac leo. Pellentesque sollicitudin pretium quam suscipit ullamcorper. Phasellus id rhoncus lectus. Vestibulum in est ultricies urna volutpat tincidunt. Aenean at ante pellentesque, dictum tellus ut, interdum massa. Sed ac risus sem. Sed sed condimentum metus, id rutrum nisl. Sed aliquet imperdiet est eu luctus. In hendrerit diam quis ex placerat, nec ornare magna porta.
+
+			Sed vulputate enim ac nibh aliquet mollis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus nec pellentesque lectus. Nulla bibendum leo eget laoreet mollis. Nunc a augue auctor, dignissim nibh nec, pharetra tellus. Maecenas lobortis mi et dolor finibus malesuada. Ut eleifend ut enim vitae luctus. Vivamus vitae eleifend tortor, sit amet porta quam. </p>
+
+	</div>
+
+	<div class="blog-holder">
+		<img class="blog-entry" id="blog-entry-mobile2" src="images/vault_boy.jpg">
+			<figcaption class="blog-header"><a>Billions Killed In Horrific Accident</a></figcaption>
+			<p id="blog-bodycopy"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et imperdiet felis. Aliquam sed scelerisque urna. Nam dignissim, est vitae efficitur aliquam, velit erat finibus ex, nec gravida nibh ipsum ac justo. Quisque auctor justo eu massa volutpat, nec blandit tortor porttitor. Aliquam eget ornare enim, eu congue orci. Quisque feugiat dolor elit, eu faucibus neque vulputate et. Pellentesque vestibulum tellus ut mollis vulputate. Nunc gravida mi ac lorem dignissim sollicitudin. Integer dignissim placerat sapien fringilla consequat. In vitae eros leo. Quisque auctor orci in diam lacinia suscipit. Cras mattis eros sed velit scelerisque, vel malesuada metus congue. Vivamus vel semper urna, a mollis enim. <br /> <br />
+
+			Praesent mattis at mi non lacinia. Pellentesque euismod, magna elementum rhoncus congue, ligula dui tempor quam, nec interdum lacus neque ac leo. Pellentesque sollicitudin pretium quam suscipit ullamcorper. Phasellus id rhoncus lectus. Vestibulum in est ultricies urna volutpat tincidunt. Aenean at ante pellentesque, dictum tellus ut, interdum massa. Sed ac risus sem. Sed sed condimentum metus, id rutrum nisl. Sed aliquet imperdiet est eu luctus. In hendrerit diam quis ex placerat, nec ornare magna porta.
+			<br /> <br />
+
+			Sed vulputate enim ac nibh aliquet mollis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus nec pellentesque lectus. Nulla bibendum leo eget laoreet mollis. Nunc a augue auctor, dignissim nibh nec, pharetra tellus. Maecenas lobortis mi et dolor finibus malesuada. Ut eleifend ut enim vitae luctus. Vivamus vitae eleifend tortor, sit amet porta quam. </p>
+
+	</div>
+
+	<div class="blog-holder">
+		<img class="blog-entry" id="blog-entry-mobile3" src="images/forest.jpg">
+			<figcaption class="blog-header"><a>Trillions Killed In Horrific Accident</a></figcaption>
+			<p id="blog-bodycopy"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et imperdiet felis. Aliquam sed scelerisque urna. Nam dignissim, est vitae efficitur aliquam, velit erat finibus ex, nec gravida nibh ipsum ac justo. Quisque auctor justo eu massa volutpat, nec blandit tortor porttitor. Aliquam eget ornare enim, eu congue orci. Quisque feugiat dolor elit, eu faucibus neque vulputate et. Pellentesque vestibulum tellus ut mollis vulputate. Nunc gravida mi ac lorem dignissim sollicitudin. Integer dignissim placerat sapien fringilla consequat. In vitae eros leo. Quisque auctor orci in diam lacinia suscipit. Cras mattis eros sed velit scelerisque, vel malesuada metus congue. Vivamus vel semper urna, a mollis enim.
+				<br /> <br />
+
+			Praesent mattis at mi non lacinia. Pellentesque euismod, magna elementum rhoncus congue, ligula dui tempor quam, nec interdum lacus neque ac leo. Pellentesque sollicitudin pretium quam suscipit ullamcorper. Phasellus id rhoncus lectus. Vestibulum in est ultricies urna volutpat tincidunt. Aenean at ante pellentesque, dictum tellus ut, interdum massa. Sed ac risus sem. Sed sed condimentum metus, id rutrum nisl. Sed aliquet imperdiet est eu luctus. In hendrerit diam quis ex placerat, nec ornare magna porta.
+			 <br /> <br />
+
+			Sed vulputate enim ac nibh aliquet mollis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus nec pellentesque lectus. Nulla bibendum leo eget laoreet mollis. Nunc a augue auctor, dignissim nibh nec, pharetra tellus. Maecenas lobortis mi et dolor finibus malesuada. Ut eleifend ut enim vitae luctus. Vivamus vitae eleifend tortor, sit amet porta quam. </p>
+
+	</div>
+
+</div>	
 
 
 </body>
