--- a/Assignments/Assignment #9/index.html
+++ b/Assignments/Assignment #9/index.html
@@ -69,7 +69,8 @@
 
     	
 
-      imagescript.style.Size = "400px"
+      imagescript.style.width = "700";
+      imagescript.style.height = "700";
 
     }
 
