--- a/Assignments/Assignment #12 (Final Submission)/events.html
+++ b/Assignments/Assignment #12 (Final Submission)/events.html
@@ -7,7 +7,7 @@
   <title>The Surf Bus Foundation </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css"/>
-  <script src="jquery-3.3.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald|Patua+One" rel="stylesheet">
 
 </head>
@@ -28,9 +28,63 @@
 
     <body>
 
+      <button onclick="toggleGrid()" id="togglegrid"> Toggle Grid </button>
+
+      <div class="gridevents"> 
+        <div class="column">
+          <img src="images/grid1.jpg">
+          <img src="images/grid2.jpg">
+          <img src="images/grid3.jpg">
+          <img src="images/grid4.jpg">
+          <img src="images/grid5.jpg">
+          <img src="images/grid6.jpg">
+        </div>
+      </div>
+
+      <div class="aboutcontent">
+
+        <h1 class="aboutinsideheader">Join Our Surf Day 20XX!</h1>
+        <h1 class="aboutinsideheader">June 20th 20XX</h1>
+
+        <img id="aboutsurf" src="images/surfboard.jpg">
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et erat eu dui blandit luctus sed vestibulum mauris. Praesent sem metus, cursus id elit vel, vestibulum blandit risus. Fusce malesuada fermentum dui a malesuada. In hac habitasse platea dictumst. Nam id augue at ex facilisis congue ut at sapien. In porta sapien a semper mollis. Nullam velit tellus, semper a nibh interdum, efficitur vehicula risus. Maecenas sed dapibus lacus.
+
+        Nulla finibus leo non bibendum suscipit. Fusce finibus id sapien eget consequat. Praesent fermentum mauris sem, venenatis aliquam turpis efficitur lobortis. Suspendisse fermentum nibh et enim commodo sollicitudin. Duis eget erat vitae tellus rutrum ultrices eget sit amet est. Mauris quis purus laoreet, maximus tortor nec, semper dui. Vivamus finibus arcu id augue congue, sit amet suscipit massa sollicitudin. Nullam ut sodales felis. Donec vulputate ut sapien vitae varius. Curabitur tempus nec felis vel fringilla. Praesent diam magna, semper sed enim et, hendrerit pretium augue. Pellentesque justo neque, consectetur vel ante vel, facilisis porttitor enim. </p>
+        </div>
+
+      <div class="aboutcontent">
+
+        <h1 class="aboutinsideheader">Fundraising Drive 20XX!</h1>
+        <h1 class="aboutinsideheader">July 2nd 20XX</h1>
+
+        <img id="aboutsurf" src="images/fundraising.jpg">
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et erat eu dui blandit luctus sed vestibulum mauris. Praesent sem metus, cursus id elit vel, vestibulum blandit risus. Fusce malesuada fermentum dui a malesuada. In hac habitasse platea dictumst. Nam id augue at ex facilisis congue ut at sapien. In porta sapien a semper mollis. Nullam velit tellus, semper a nibh interdum, efficitur vehicula risus. Maecenas sed dapibus lacus.
+
+        Nulla finibus leo non bibendum suscipit. Fusce finibus id sapien eget consequat. Praesent fermentum mauris sem, venenatis aliquam turpis efficitur lobortis. Suspendisse fermentum nibh et enim commodo sollicitudin. Duis eget erat vitae tellus rutrum ultrices eget sit amet est. </p>
+        </div>
+
+      <div class="aboutcontent">
+
+        <h1 class="aboutinsideheader">Beach Picnic Day!</h1>
+        <h1 class="aboutinsideheader">August 7th 20XX</h1>
+
+        <img id="aboutsurf" src="images/picnic.jpg">
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et erat eu dui blandit luctus sed vestibulum mauris. Praesent sem metus, cursus id elit vel, vestibulum blandit risus. Fusce malesuada fermentum dui a malesuada. In hac habitasse platea dictumst. Nam id augue at ex facilisis congue ut at sapien. In porta sapien a semper mollis. Nullam velit tellus, semper a nibh interdum, efficitur vehicula risus. Maecenas sed dapibus lacus.
+
+        Nulla finibus leo non bibendum suscipit. Fusce finibus id sapien eget consequat. Praesent fermentum mauris sem, venenatis aliquam turpis efficitur lobortis. Suspendisse fermentum nibh et enim commodo sollicitudin. Duis eget erat vitae tellus rutrum ultrices eget sit amet est. Mauris quis purus laoreet, maximus tortor nec, semper dui. Vivamus finibus arcu id augue congue, sit amet suscipit massa sollicitudin. Nullam ut sodales felis. Donec vulputate ut sapien vitae varius. Curabitur tempus nec felis vel fringilla. Praesent diam magna, semper sed enim et, hendrerit pretium augue. Pellentesque justo neque, consectetur vel ante vel, facilisis porttitor enim. </p>
+        </div>        
+
+
 
       <script>
-        
+        function toggleGrid(){
+        $(".gridevents").toggle();
+        }
+
+
 
       </script>
 
@@ -40,7 +94,7 @@
     </body>
 
 
-
+<footer>
 
 <div id="copyright">
 <p>© Surf Bus Foundation 20XX</p>
